--- a/ansible/ubuntu.yml
+++ b/ansible/ubuntu.yml
@@ -3,7 +3,7 @@
   connection: local
 
   vars:
-    gdev_env_dir: "{{ansible_env.HOME}}/.gdev-env"
+    gdev_env_dir: "/usr/local/gdev-env"
     gdev_user_files: "{{ansible_env.HOME}}/.gdev"
     machine_ip: 127.0.0.1
 
