--- a/ansible/ubuntu.yml
+++ b/ansible/ubuntu.yml
@@ -44,6 +44,12 @@
       become_method: sudo
       pip:
         name: docker-py
+        
+    - name: Install Docker Compose
+      become: yes
+      become_method:sudo
+      shell: curl -L "https://github.com/docker/compose/releases/download/1.9.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose; chmod +x /usr/local/bin/docker-compose
+      
 
     - name: Create gdev directory
       file:
