--- a/ansible/ubuntu.yml
+++ b/ansible/ubuntu.yml
@@ -18,23 +18,28 @@
         pkg: "apt-transport-https"
         state: installed
 
-    - name: Add Docker repository key
-      become: yes
-      become_method: sudo
-      apt_key: id=58118E89F3A912897C070ADBF76221572C52609D keyserver=hkp://p80.pool.sks-keyservers.net:80 state=present
+   - name: Ensure the system can use the HTTPS transport for APT
+      stat:
+       path: /usr/lib/apt/methods/https
+      register: apt_https_transport
 
-    - name: Add Docker repository and update apt cache
-      become: yes
-      become_method: sudo
-      apt_repository:
-        repo: "deb http://get.docker.io/ubuntu docker main"
-        update_cache: yes
-        state: present
+    - name: Install HTTPS transport for APT
+       apt:
+        pkg: apt-transport-https
+        state: installed
+       when: not apt_https_transport.stat.exists
 
-    - name: Install lxc-docker
-      become: yes
-      become_method: sudo
-      apt: pkg=lxc-docker state=installed install_recommends=yes allow_unauthenticated=yes
+    - name: Add Docker key
+        sudo: true
+        apt_key: keyserver=hkp://p80.pool.sks-keyservers.net:80 id=58118E89F3A912897C070ADBF76221572C52609D
+
+    - name: Add Docker apt-repository
+        apt_repository:
+          repo: deb https://apt.dockerproject.org/repo ubuntu-xenial main
+          state: present
+
+    - name: Install docker package
+        apt: name=docker-engine update_cache=yes state=latest
     
     - name: Install Unison
       homebrew: name=unison state=present
@@ -75,13 +80,13 @@
         force: yes
       tags: ['pre-install']
       
-    - name: Adding user to docker group
-      user: 
-        name: "{{ansible_env.USER}}"
-        groups: docker
-        append: yes
-      become: yes
-      become_method: sudo
+    #- name: Adding user to docker group
+    #  user: 
+    #    name: "{{ansible_env.USER}}"
+    #    groups: docker
+    #    append: yes
+    #  become: yes
+    #  become_method: sudo
 
     - name: Make sure docker is running
       become: yes
