--- a/ansible/ubuntu.yml
+++ b/ansible/ubuntu.yml
@@ -34,11 +34,15 @@
       apt_key: keyserver=hkp://p80.pool.sks-keyservers.net:80 id=58118E89F3A912897C070ADBF76221572C52609D
 
     - name: Add Docker apt-repository
+      become: yes
+      become_method: sudo
       apt_repository:
         repo: deb https://apt.dockerproject.org/repo ubuntu-xenial main
         state: present
 
     - name: Install docker package
+      become: yes
+      become_method: sudo
       apt: name=docker-engine update_cache=yes state=latest
     
     - name: Install Unison
