--- a/docker/services.yml
+++ b/docker/services.yml
@@ -42,7 +42,7 @@ services:
     restart: always
     network_mode: "bridge"
   signaler:
-    image: onnimonni/signaler
+    image: traone/signaler
     environment:
       GENERATOR: "self-signed"
     volumes:
